fix bg bleed

--- a/src/scss/_project-header.scss
+++ b/src/scss/_project-header.scss
@@ -52,7 +52,7 @@
       'client'
       'title'
       'meta';
-    grid-template-rows: auto 1fr var(--spacing-block);
+    grid-template-rows: auto 1fr minmax(auto, var(--spacing-block));
     align-items: end;
 
     color: var(--color-text);
@@ -67,15 +67,18 @@
       mix-blend-mode: exclusion;
     }
 
-    @media (--tablet-up) {
+    @media (--mobile-up) {
       grid-area: text;
       padding: calc(var(--gutter) * 2);
+      // padding-top: calc(var(--gutter) * 4);
     }
 
     .project-item--title {
       margin: 0 0 calc(var(--spacing-block) * 2);
 
-      @media (--tablet-up) {
+      @media (--mobile-up) {
+        margin-bottom: auto;
+        margin-top: 1em;
       }
     }
 
@@ -114,12 +117,11 @@
   }
 
   .project-item--img {
+    background-color: transparent;
     grid-area: img;
     z-index: 1;
-    border-top-left-radius: var(--border-radius-large);
+    border-radius: 0;
     border-top-right-radius: var(--border-radius-large);
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
 
     @media (--tablet-up) {
       border-radius: 0;
